assets/css/amp-stories.css
amp-story-grid-layer[template="fill"] .wp-block-image { margin: 0; }

.has-background {
	padding: 7px !important;
	display: flex;
}

.wp-block-amp-amp-story-cta {
	color: #fff;
	margin-bottom: 1.5em;
}

.wp-block-amp-amp-story-cta.aligncenter {
	text-align: center;
}

.wp-block-amp-amp-story-cta.alignright {
	/*rtl:ignore*/
	text-align: right;
}

.amp-block-story-cta__link {
	background-color: #32373c;
	border: none;
	box-shadow: none;
	color: inherit;
	cursor: pointer;
	display: inline-block;
	font-size: 18px;
	margin: 0;
	padding: 12px 24px;
	text-align: center;
	text-decoration: none;
	white-space: normal;
	overflow-wrap: break-word;
}

.amp-block-story-cta__link:hover,
.amp-block-story-cta__link:focus,
.amp-block-story-cta__link:active,
.amp-block-story-cta__link:visited {
	color: inherit;
}

.is-style-rounded,
.is-style-rounded img {
    border-radius: 5px;
}

.is-style-half-rounded {
	border-radius: 4px 4px 26px 26px;
}

amp-story-grid-layer amp-img > img {
	object-position: inherit;
}

.is-style-white p,
.is-style-white.wp-block-quote cite,
.is-style-white .wp-block-quote__citation {
	color: #ffffff;
}

.wp-block-quote {
	background: url("../images/quote-black.svg") center -23px no-repeat;
}

.wp-block-quote cite {
	font-style: normal;
}

.is-style-white.wp-block-quote {
	background-image: url("../images/quote-white.svg");
}

